--- a/JavaEleven/pom.xml
+++ b/JavaEleven/pom.xml
@@ -4,9 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.rao2100.streams</groupId>
-    <artifactId>streams</artifactId>
+    <groupId>org.example</groupId>
+    <artifactId>JavaEleven</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
